--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@turf/turf": "^7.0.0",
     "discord.js": "^14.15.3",
-    "puppeteer": "^19.6.0"
+    "puppeteer": "^19.6.0",
+    "express": "^4.18.2"
   }
 }
