--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "main": "bot.js",
   "type": "module",
   "scripts": {
-    "start": "node bot.js",
-    "postinstall": "npx puppeteer install"
+    "start": "node bot.js"
   },
   "dependencies": {
     "@turf/turf": "^7.0.0",
     "discord.js": "^14.15.3",
-    "puppeteer": "^19.6.0",
-    "express": "^4.18.2"
+    "puppeteer": "^19.6.0"
   }
 }
